Add all to media query

--- a/styles/app.css
+++ b/styles/app.css
@@ -71,7 +71,7 @@ a:hover, a:active {
   border-bottom: 1px dotted #B0B0B0;
 }
 
-@media (hover: none), (-webkit-hover: none), (-moz-hover: none), (-ms-hover: none) {
+@media all and (hover: none) {
   a:hover {
     color: inherit;
     border-bottom: 1px dotted rgb(0, 168, 0);
