Add hover: on-demand to css media query

--- a/styles/app.css
+++ b/styles/app.css
@@ -71,8 +71,8 @@ a:hover, a:active {
   border-bottom: 1px dotted #B0B0B0;
 }
 
-@media all and (hover: none) {
-  a:hover {
+@media (hover: none), (hover: on-demand) {
+  a:hover, a:active {
     color: inherit;
     border-bottom: 1px dotted rgb(0, 168, 0);
   }
