--- a/styles/app.css
+++ b/styles/app.css
@@ -31,16 +31,18 @@ html, body, nav, p, div, span, h1, ul, li, a {
 
 html {
   background-color: rgb(0, 120, 0);
-  text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
 }
 
 body {
   font-family: helvetica neue, helvetica, sans-serif;;
   font-weight: 300;
   font-size: 16px;
+  letter-spacing: 0.025em;
+
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
 }
 
 h1 {
@@ -54,6 +56,7 @@ nav {
 
 p {
   margin: 3vh 0;
+  line-height: 1.4;
 }
 
 #root > div > div > div {
