Refactor css order and add comments

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,5 +1,5 @@
 /*reset*/
-html, body, nav, p, div, span, h1, ul, li, a {
+html, body,  div, span, a, p, ul, li, h1, nav {
   margin: 0;
   border: 0;
   padding: 0;
@@ -12,29 +12,12 @@ html, body, nav, p, div, span, h1, ul, li, a {
   background: transparent;
 }
 
-#root {
-  min-height: 100vh;
-  min-width: 100vw;
-  background-color: #f0f0f0;
-}
-
-#root > div {
-  min-width: 34vw;
-  max-width: 500px;
-  margin: auto;
-  padding: 3vh 3vw 12vh 3vw;
-}
-
-#root > div > a {
-  font-size: 14px;
-}
-
 html {
   background-color: rgb(0, 120, 0);
 }
 
 body {
-  font-family: helvetica neue, helvetica, sans-serif;;
+  font-family: helvetica neue, helvetica, sans-serif;
   font-weight: 300;
   font-size: 16px;
   letter-spacing: 0.025em;
@@ -45,28 +28,22 @@ body {
   -ms-text-size-adjust: none;
 }
 
-h1 {
-  font-size: 22px;
-  margin-bottom: 0.5vh;
+/*root div in index.html*/
+#root {
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: #F0F0F0;
 }
 
-nav {
-  margin: 3vh 0;
+/*reactroot div*/
+#root > div {
+  min-width: 34vw;
+  max-width: 500px;
+  margin: auto;
+  padding: 3vh 3vw 12vh 3vw;
 }
 
-p {
-  margin: 3vh 0;
-  line-height: 1.4;
-}
-
-#root > div > div > div {
-  margin: 1vh 0;
-}
-
-#root > div > div > div > div {
-  margin: 3vh 0;
-}
-
+/*links*/
 a {
   border-bottom: 1px dotted rgb(0, 168, 0);
   touch-action: manipulation;
@@ -88,6 +65,7 @@ a:hover, a:active {
   border-bottom: 1px solid #B0B0B0;
 }
 
+/*custom bullets*/
 li {
   list-style: none;
   padding-left: 18px;
@@ -100,8 +78,37 @@ li:before {
   padding-right: 7px;
 }
 
+/*title*/
+h1 {
+  font-size: 22px;
+  margin-bottom: 0.5vh;
+}
+
+/*repo link*/
+#root > div > a {
+  font-size: 14px;
+}
+
+/*map menu*/
+nav {
+  margin: 3vh 0;
+}
+
+p {
+  margin: 3vh 0;
+  line-height: 1.4;
+}
+
 code {
   font-family: monospace;
   font-size: 15px;
   padding-left: 2px;
+}
+
+#root > div > div > div {
+  margin: 1vh 0;
+}
+
+#root > div > div > div > div {
+  margin: 3vh 0;
 }
