Update css reset

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,5 +1,5 @@
 /*reset*/
-html, body, div, span, a, p, ul, li, h1, nav {
+html, body, div, span, a, p, ul, li, h1, code, nav {
   margin: 0;
   border: 0;
   padding: 0;
